styles/base.css
/* ... */
@font-face {
    font-family: 'TeX Gyre Pagella';
    src: local('TeX Gyre Pagella Bold'),
                    local('TeXGyrePagella-Bold'),
                    url('../fonts/texgyrepagella-bold.otf') format('opentype');
                    font-weight: bold;
}

@font-face {
    font-family: 'TeX Gyre Pagella';
    src: local('TeX Gyre Pagella Bold Italic'),
         local('TeXGyrePagella-BoldItalic'),
         url('../fonts/texgyrepagella-bolditalic.otf') format('opentype');
    font-weight: bold;
    font-style:  italic;
}


@font-face {
    font-family: 'Bitstream Vera Sans';
    src: local('Bitstream Vera Sans'),
         local('BitstreamVeraSans'),
         url('../fonts/Vera.ttf') format('truetype');
}

@font-face {
    font-family: 'Bitstream Vera Sans';
    src: local('Bitstream Vera Sans Oblique'),
         local('BitstreamVeraSans-Oblique'),
         url('../fonts/VeraIt.ttf') format('truetype');
    font-style: italic;
}

@font-face {
    font-family: 'Bitstream Vera Sans';
    src: local('Bitstream Vera Sans Bold'),
         local('BitstreamVeraSans-Bold'),
         url('../fonts/VeraBd.ttf') format('truetype');
    font-weight: bold;
}

@font-face {
    font-family: 'Bitstream Vera Sans';
    src: local('Bitstream Vera Sans Bold Oblique'),
         local('BitstreamVeraSans-BoldOblique'),
         url('../fonts/VeraBI.ttf') format('truetype');
    font-weight: bold;
    font-style:  italic;
}

@font-face {
    font-family: 'BFHebrew';
    src: url('../fonts/BFHebrew.eot');
    src: url('../fonts/BFHebrew.eot?#iefix') format('embedded-opentype'),
         url('../fonts/BFHebrew.ttf')        format('truetype'),
         url('../fonts/BFHebrew.woff')       format('woff');
    font-weight: normal;
    font-style:  normal;
}

@font-face {
    font-family: 'IM Fell DW Pica';
    src: local('IM Fell DW Pica');
    src: url('../fonts/imfepirm28p.eot');
    src: url('../fonts/imfepirm28p.eot?#iefix') format('embedded-opentype'),
         url('../fonts/imfepirm28p.woff') format('woff'),
         url('../fonts/imfepirm28p.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'IM Fell DW Pica';
    src: local('IM Fell DW Pica');
    src: url('../fonts/imfepiit28p.eot');
    src: url('../fonts/imfepiit28p.eot?#iefix') format('embedded-opentype'),
         url('../fonts/imfepiit28p.woff') format('woff'),
         url('../fonts/imfepiit28p.ttf') format('truetype');
    font-weight: normal;
    font-style: italic;
}


/* WebKit specific CSS */

/* Make the drop caps aligned with the second line of text. */
.webkit .first_verse:first-letter, .webkit .first_paragraph:first-letter {
    margin-bottom: 0;
    margin-top:    5px;
    padding: 1px;
}

/* When using @font-face, "font-variant: small-caps" does not work in WebKit, so make the text all uppercase instead. */
/* See https://code.google.com/p/chromium/issues/detail?id=46931 */
.webkit .d {
    text-transform: uppercase;
}


/* Opera specific CSS */

/* Make the drop caps take up two lines, so that wrapping text is not placed over it.  (See John 4:1.) */
.opera .first_verse:first-letter, .opera .first_paragraph:first-letter {
    margin-bottom: 0;
    margin-top:    13px;
    padding: 1px;
}

/* Remove extra padding on buttons (this emulates button clicks similar to other browsers). */
.opera button:active {
    padding: 5px 14px;
}


/* IE specific CSS */

/* Make the inputIcon appear next to the queryInput. */
/*NOTE: The query box is slightly off centered in IE with this CSS. */
.ie .inputIcon {
    position: relative;
}

/* Make the drop caps aligned with the second line of text. */
.ie .first_verse:first-letter, .ie .first_paragraph:first-letter {
    margin-top: 5px;
}

